# Taskbot-MVP

./: .bandit  .env  .env.example  .gitignore  API.md  BITABLE_STRUCTURE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEISHU_SDK_FIXES.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  add_test_data.py  check_table_fields.py  config.yaml.example  create_bitable_correct.py  create_bitable_simple.py  daily_stats.json  db_audit.json  deploy.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  quick_setup.py  requirements-dev.txt  requirements.txt  setup_bitable.py  setup_complete.sh  setup_wizard.py  show_bitable_link.py  simple_bitable_test.py  simple_test.py  simple_test_data.py  start_production.py  task.md  (+3 more)
.github/workflows/: ci.yml
app/: __init__.py  api.py  bitable.py  bitable_mock.py  config.py  main.py  webhooks.py
app/router/: __init__.py  github_hook.py
app/services/: ci.py  db_audit.py  feishu.py  llm.py  match.py  task_manager.py  task_monitor.py
docs/: task_bot_mvp_prompt设定说明.md  task_bot_mvp_产品PRD需求文档.md  task_bot_mvp_产品开发文档.md  task_bot_mvp_测试用例及验收文档.md  task_bot_mvp_运行与环境配置.md
prompts/: match_template.txt  review_template.txt
taskbot-mvp/docs/: task_bot_mvp_prompt设定说明.md  task_bot_mvp_产品PRD需求文档.md  task_bot_mvp_运行与环境配置.md
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  feishu_events.json  github_payloads.json
tests/integration/: test_webhooks.py
tests/unit/: test_bitable.py  test_feishu.py  test_github_webhook.py  test_match.py
